--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
     <!-- Google Fonts -->
     <link href="<link href="https://fonts.googleapis.com/css?family=Lato|Varela+Round" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/animate.css">
+
 </head>
 
 <body>
@@ -25,7 +31,7 @@
         </div>
       </nav>
       <div class="container hero">
-        <h1>Save, share and collaborate.</h1>
+        <h1 class="animated fadein">Save, share and collaborate.</h1>
         <p>simpleBox lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
         <a href="signup.html" class="btn">Start Your Free Trial!</a>
         <img src="images/laptop.png" alt="simpleBox" />
