--- a/index.html
+++ b/index.html
@@ -38,23 +38,28 @@
       </div>
   </header>
   <main role="main">
+
     <!-- Benefits -->
     <section class="benefits">
       <ul class="container">
         <li class="one-third">
+          <i class="fa fa-file-o"></i>
           <h2>Create notes </h2>
           <p>Using Markdown, you can create simple text-based documents to save and share. You can collaborate with others to write and edit content.</p>
         </li>
         <li class="one-third">
+          <i class="fa fa-picture-o"></i>
           <h2>Save images</h2>
-          <p>Are there images oyou find interesting enough to save? Now you have a way to organize and store those within blocbox.</p>
+          <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within blocbox.</p>
         </li>
         <li class-"one-third">
+          <i class="fa fa-link"></i>
           <h2>Add links</h2>
           <p>Forget bookmarking sites in your browser. With blocbox, you can add links, group them and view them from any computer.</p>
         </li>
       </ul>
     </section>
+
     <!-- Pricing -->
     <section class="pricing">
       <div class="container">
@@ -62,7 +67,7 @@
         <p>We have many options to fit your needs. It's free to try for 30 days*, and you can always change your plan once you signed up. <br/>Here are the different features of each plan:</p>
       </div>
       <ul class="container">
-        <li class"one-third">
+        <li class="one-third">
           <div class="box">
             <h3> Casual </h3>
             <h4> Free </h4>
@@ -101,6 +106,9 @@
         </div>
       </li>
       </ul>
+      <div class="container">
+        <p class="small"> *We will not collect your credit card information until your 30-day trial has ended.</p>
+      </div>
     </section>
 
     <!-- Testimonials -->
@@ -111,25 +119,25 @@
       </div>
       <ul class="container">
         <li class="one-fourth">
-          <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
+          <blockquote>"simplebox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
           </blockquote>
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
           <p class="name"><strong>Stella B. </strong><br/>Freelance Designer, N. Dakota</p>
         </li>
-        <li class="one-fourth">
-          <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
+        <li class="one-fourth1">
+          <blockquote>"simplebox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
           </blockquote>
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
           <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
         </li>
         <li class="one-fourth">
-          <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
+          <blockquote>"simplebox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
           </blockquote>
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
           <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
         </li>
-        <li class="one-fourth">
-          <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
+        <li class="one-fourth1">
+          <blockquote>"simplebox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."
           </blockquote>
           <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg" alt="avatar">
           <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
@@ -138,7 +146,7 @@
   </main>
 
   <!-- Assignment -->
-    <div class="bottomcta-container">
+    <div class="container">
       <h2>Revolutionize your library</h2>
       <p>Create the best storage for your information.</p>
       <a href="signup.html" class="btn">Start Your Free Trial!</a>
