Dashboard html completed

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="one-half">
           <ul>
               <li><a href="signin.html">Sign In</a></li>
+              <li class="btn-outline"><a href="signup.html">Sign Up</a></li>
           </ul>
         </div>
       </nav>
@@ -145,12 +146,6 @@
       </ul>
   </main>
 
-  <!-- Assignment -->
-    <div class="container">
-      <h2>Revolutionize your library</h2>
-      <p>Create the best storage for your information.</p>
-      <a href="signup.html" class="btn">Start Your Free Trial!</a>
-    </div>
 
   <!-- Footer -->
   <footer>
@@ -168,7 +163,7 @@
         </ul>
       </nav>
       <div class="right-footer-block one-third">
-        <img class="logo" src="images/site-logo.png" alt="simpleBox" />
+        <img class="logo" src="images/simpleBox Logo .png" alt="simpleBox" />
       </div>
     </div>
   </footer>
