Dashboard styling completed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <h2>Save images</h2>
           <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within blocbox.</p>
         </li>
-        <li class-"one-third">
+        <li class="one-third">
           <i class="fa fa-link"></i>
           <h2>Add links</h2>
           <p>Forget bookmarking sites in your browser. With blocbox, you can add links, group them and view them from any computer.</p>
