--- a/dashboard.html
+++ b/dashboard.html
@@ -18,11 +18,11 @@
 <body class="dashboard">
   <!-- LEFT NAV -->
   <nav id="left-nav" class="left-nav">
-    <a href="#" class="site-logo"><img src="images/site-logo.png" /></a>
+    <a href="#" class="site-logo"><img src="images/simpleBox Logo .png" /></a>
     <div class="items">
       <p>Items</p>
       <ul>
-        <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
+        <li class="active"><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
         <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
         <li><a href="imageposts.html"><i class="fa fa-picture-o"></i> Images</a></li>
         <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
@@ -83,7 +83,6 @@
        <div class="content-item">
          <div class="item-box">
            <img src="https://s3.amazonaws.com/StartupStockPhotos/uploads/24.jpg" height="550" width="825">
-          </div>
          </div>
        </div>
        <div class="content-item">
@@ -95,7 +94,7 @@
        <div class="content-item">
          <div class="item-box">
            <h2><img class="favicon" src="https://www.invisionapp.com/favicon.ico"> <a href="#">invisionapp.com</a></h2>
-           <p>Free Web &amp; Mobile (iOS, Android) Prototyping and UI Mockup Tool | InVision</p
+           <p>Free Web &amp; Mobile (iOS, Android) Prototyping and UI Mockup Tool | InVision</p>
          </div>
        </div>
        <div class="content-item">
@@ -106,7 +105,7 @@
        <div class="content-item">
          <div class="item-box">
            <h2><a href="#">Why storing inspiration is great</a></h2>
-           <p>blocbox is a new tool to help collect and store your inspiration and information. From images, to links, to notes like this one, you can keep track of all your favorite things.</p>
+           <p>simpleBox is a new tool to help collect and store your inspiration and information. From images, to links, to notes like this one, you can keep track of all your favorite things.</p>
          </div>
        </div>
      </div>
