--- a/dashboard.html
+++ b/dashboard.html
@@ -43,18 +43,16 @@
       <p>Joey Kirk</p>
 
 <!-- Account mennu -->
-    <ul class="menu">
+    <ul class="menu1">
       <li>
         <a href="#"><i class="fa fa-cog"></i></a>
         <ul>
-          <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
-          <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
-          <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
+          <li><a href="#"><i class="fa fa-user"></i> My Account</a></li>
+          <li><a href="#"><i class="fa fa-users"></i> Collaborators</a></li>
+          <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
         </ul>
       </li>
     </ul>
-
-    </div>
   </nav>
 
   <main role="main">
@@ -144,6 +142,7 @@
    $( "#menu").click(function() {
      $("#left-nav").toggleClass("open", 200);
    });
+   $(".menu1").dropit1();
  </script>
 </body>
 </html>
