--- a/dashboard.html
+++ b/dashboard.html
@@ -26,7 +26,7 @@
     <div class="items">
       <p>Items</p>
       <ul>
-        <li><a href="#" class="active"><i class="fa fa-th-large"></i> All Items</a></li>
+        <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
         <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
         <li><a href="imageposts.html"><i class="fa fa-picture-o"></i> Images</a></li>
         <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
@@ -40,20 +40,10 @@
     </div>
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
-      <p>Joey Kirk</p>
-
-<!-- Account mennu -->
-    <ul class="menu1">
-      <li>
-        <a href="#"><i class="fa fa-cog"></i></a>
-        <ul>
-          <li><a href="#"><i class="fa fa-user"></i> My Account</a></li>
-          <li><a href="#"><i class="fa fa-users"></i> Collaborators</a></li>
-          <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
-        </ul>
-      </li>
-    </ul>
-  </nav>
+      <p>Ekkalux Nguyen</p>
+      <a href="#"><i class="fa fa-cog"></i></a>
+    </div>
+    </nav>
 
   <main role="main">
 
@@ -142,7 +132,6 @@
    $( "#menu").click(function() {
      $("#left-nav").toggleClass("open", 200);
    });
-   $(".menu1").dropit1();
  </script>
 </body>
 </html>
