--- a/imageposts.html
+++ b/imageposts.html
@@ -28,7 +28,7 @@
       <ul>
         <li><a href="#"><i class="fa fa-th-large"></i> All Items</a></li>
         <li><a href="#"><i class="fa fa-file-o"></i> Notes</a></li>
-        <li><a href="imageposts.html" class="active"><i class="fa fa-picture-o"></i> Images</a></li>
+        <li><a href="imageposts.html"><i class="fa fa-picture-o"></i> Images</a></li>
         <li><a href="#"><i class="fa fa-link"></i> Links</a></li>
       </ul>
       <p>Boxes</p>
@@ -40,19 +40,8 @@
     </div>
     <div class="settings">
       <img src="https://s3.amazonaws.com/uifaces/faces/twitter/jsa/128.jpg">
-      <p>Joey Kirk</p>
-
-<!-- Account mennu -->
-    <ul class="menu">
-      <li>
-        <a href="#"><i class="fa fa-cog"></i></a>
-        <ul>
-          <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
-          <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
-          <li><a href="#"><i class="fa fa-link"></i> Link</a></li>
-        </ul>
-      </li>
-    </ul>
+      <p>Ekkalux Nguyen</p>
+      <a href="#"><i class="fa fa-cog"></i></a>
 
     </div>
   </nav>
